# watflow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cli-reference.md  configuration.md  deployment.md  getting-started.md  integrations.md  workflow-structure.md
docs/integrations/: CLAUDE.md  GMAIL.md
template/: .env.example  .gitignore  README.md  config.yaml  main.py  requirements.txt
template/tools/: example_tool.py
template/workflows/: example.md
watflow/: __init__.py  cli.py  config.py  env.py  runner.py  validation.py
watflow/integrations/: __init__.py  claude.py  gmail.py
